--- a/TODO
+++ b/TODO
@@ -4,7 +4,10 @@ TODO
 2. V Katalogu pridat id katalogu?
 3. User prepsat na check_required().
 4. YearMonth prepsat na check_required().
-5.
+5. Dokumentace pro User.
+6. Dokumentace pro YearMonth.
+7. Testy
+8.
 
 Applied
 =======
