--- a/TODO
+++ b/TODO
@@ -7,7 +7,8 @@ TODO
 5. Dokumentace pro User.
 6. Dokumentace pro YearMonth.
 7. Testy
-8.
+8. V Katalogu type musi byt Q entita.
+9.
 
 Applied
 =======
