--- a/TODO
+++ b/TODO
@@ -2,7 +2,6 @@ TODO
 ====
 1. V Katalogu udelat check na cislo v count.
 2. V Katalogu pridat id katalogu?
-5. Dokumentace pro User.
 6. Dokumentace pro YearMonth.
 7. Testy
 8. V Katalogu type musi byt Q entita.
@@ -15,3 +14,6 @@ OK [20201219] skim
 
 4. YearMonth prepsat na check_required().
 OK [20201219] skim
+
+5. Dokumentace pro User.
+OK [20201220] skim
