--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.04
  - Move check_array_object() to Mo::utils::Array.
  - Update Module::Install to 1.21 version.
+ - Update copyright years.
 
 0.03 2020-12-20T02:28:15+01:00
  - Add documentation for User.
