--- a/README
+++ b/README
@@ -24,7 +24,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © Michal Josef Špaček 2020
+    © Michal Josef Špaček 2020-2025
 
     BSD 2-Clause License
 
