--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.04
  - Move check_array_object() to Mo::utils::Array.
+ - Rename example files to better names.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
 
